Fixed some import page layout issues

--- a/backoffice/backoffice-browser/src/pages/import/import.scss
+++ b/backoffice/backoffice-browser/src/pages/import/import.scss
@@ -6,7 +6,7 @@ form {
     display: flex;
     flex-direction: row;
     margin-bottom: 1em;
-    padding: 0.2em;
+    padding: 0.2em 0.5em;
 
     .actions {
         display: flex;
